# rusty-solar

./: Cargo.toml
src/: main.rs
src/cli/: mod.rs
src/cli/dynamo_db/: mod.rs
